--- a/index.html
+++ b/index.html
@@ -14,47 +14,57 @@
       <input type="radio" name="gender" id="male"><label for="male">мужской</label>
     </fieldset>
     <fieldset id="fisical-data">
-      <div class="fd-div"><label for="age">возраст</label><input type="text" id="age"></div>
-      <div class="fd-div"><label for="height">рост</label><input type="text" id="height"></div>
-      <div class="fd-div"><label for="weight">вес</label><input type="text" id="weight"></div>
+      <div class="fd-div"><label for="age">возраст</label><input type="text" id="age" placeholder="лет"></div>
+      <div class="fd-div"><label for="height">рост</label><input type="text" id="height" placeholder="см"></div>
+      <div class="fd-div"><label for="weight">вес</label><input type="text" id="weight" placeholder="кг"></div>
     </fieldset>
     <fieldset id="stresses">
       <legend>физическая нагрузка</legend>
       <div class="stress-container">
-        <input type="radio" name="stress" id="min"><label for="min">минимальная</label>
+        <input type="radio" name="stress" id="min" value="1.2"><label for="min">минимальная</label>
         <div class="separator"></div>
         <a href="" class="hint">?
           <div class="hint-hidden">сидячая работа и нет физических нагрузок</div>
         </a>
       </div>
       <div class="stress-container">
-        <input type="radio" name="stress" id="low"><label for="low">низкая</label>
+        <input type="radio" name="stress" id="low" value="1.375"><label for="low">низкая</label>
         <a href="" class="hint">?
           <div class="hint-hidden">редкие, нерегулярные тренировки, активность в быту</div>
         </a>
       </div>
       <div class="stress-container">
-        <input type="radio" name="stress" id="middle"><label for="middle">средняя</label>
+        <input type="radio" name="stress" id="middle" value="1.55"><label for="middle">средняя</label>
         <a href="" class="hint">?
           <div class="hint-hidden">тренировки 3-5 раз в неделю</div>
         </a>
       </div>
       <div class="stress-container">
-        <input type="radio" name="stress" id="high"><label for="high">высокая</label>
+        <input type="radio" name="stress" id="high" value="1.725"><label for="high">высокая</label>
         <a href="" class="hint">?
           <div class="hint-hidden">тренировки 6-7 раз в неделю</div>
         </a>
       </div>
       <div class="stress-container" style="border: none;">
-        <input type="radio" name="stress" id="hardcore"><label for="hardcore">очень высокая</label>
+        <input type="radio" name="stress" id="hardcore" value="1.9"><label for="hardcore">очень высокая</label>
         <a href="" class="hint">?
           <div class="hint-hidden">тренировки больше 7 раз в неделю и физическая нагрузка на работе</div>
         </a>
       </div>
     </fieldset>
+    <div id="buttons">
+      <button>рассчитать</button><button>очистить</button>
+    </div>
   </form>
 </section>
-<section id="result"></section>
-<script></script>
+<section id="result">
+  <fieldset>
+    <legend>ваша норма</legend>
+    <div class="stress-container"><span>поддержание веса: </span><span><span class="final-result">333</span><span> ккал</span></span></div>
+    <div class="stress-container"><span>снижение веса: </span><span><span class="final-result">809</span><span> ккал</span></span></div>
+    <div class="stress-container" style="border: none;"><span>набор веса: </span><span><span class="final-result">9999999999</span><span> ккал</span></span></div>
+  </fieldset>
+</section>
+<script src="./script.js"></script>
 
 </html>
