--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <input type="radio" name="gender" id="male"><label for="male">мужской</label>
     </fieldset>
     <fieldset id="fisical-data">
-      <div class="fd-div"><label for="age">возраст</label><input type="text" id="age" placeholder="лет"></div>
-      <div class="fd-div"><label for="height">рост</label><input type="text" id="height" placeholder="см"></div>
-      <div class="fd-div"><label for="weight">вес</label><input type="text" id="weight" placeholder="кг"></div>
+      <div class="fd-div"><label for="age">возраст</label><input type="number" id="age" placeholder="лет"></div>
+      <div class="fd-div"><label for="height">рост</label><input type="number" id="height" placeholder="см"></div>
+      <div class="fd-div"><label for="weight">вес</label><input type="number" id="weight" placeholder="кг"></div>
     </fieldset>
     <fieldset id="stresses">
       <legend>физическая нагрузка</legend>
@@ -53,16 +53,16 @@
       </div>
     </fieldset>
     <div id="buttons">
-      <button>рассчитать</button><button>очистить</button>
+      <button id="submit">рассчитать</button><button id="reset" style="display: none;">очистить</button>
     </div>
   </form>
 </section>
 <section id="result">
   <fieldset>
     <legend>ваша норма</legend>
-    <div class="stress-container"><span>поддержание веса: </span><span><span class="final-result">333</span><span> ккал</span></span></div>
-    <div class="stress-container"><span>снижение веса: </span><span><span class="final-result">809</span><span> ккал</span></span></div>
-    <div class="stress-container" style="border: none;"><span>набор веса: </span><span><span class="final-result">9999999999</span><span> ккал</span></span></div>
+    <div class="stress-container"><span>поддержание веса: </span><span><span class="final-result norm">0</span><span> ккал</span></span></div>
+    <div class="stress-container"><span>снижение веса: </span><span><span class="final-result less">0</span><span> ккал</span></span></div>
+    <div class="stress-container" style="border: none;"><span>набор веса: </span><span><span class="final-result more">0</span><span> ккал</span></span></div>
   </fieldset>
 </section>
 <script src="./script.js"></script>
