--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <fieldset id="genders">
       <legend id="gender-span">пол</legend>
       <input type="radio" name="gender" id="female"><label for="female">женский</label>
-      <input type="radio" name="gender" id="male"><label for="male">мужской</label>
+      <input type="radio" name="gender" id="male" checked><label for="male">мужской</label>
     </fieldset>
     <fieldset id="fisical-data">
       <div class="fd-div"><label for="age">возраст</label><input type="number" id="age" placeholder="лет"></div>
@@ -34,7 +34,7 @@
         </a>
       </div>
       <div class="stress-container">
-        <input type="radio" name="stress" id="middle" value="1.55"><label for="middle">средняя</label>
+        <input type="radio" name="stress" id="middle" value="1.55" checked><label for="middle">средняя</label>
         <a href="" class="hint">?
           <div class="hint-hidden">тренировки 3-5 раз в неделю</div>
         </a>
@@ -53,7 +53,7 @@
       </div>
     </fieldset>
     <div id="buttons">
-      <button id="submit">рассчитать</button><button id="reset" style="display: none;">очистить</button>
+      <button id="submit">рассчитать</button><button id="reset">очистить</button>
     </div>
   </form>
 </section>
