--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <fieldset id="stresses">
       <legend>физическая нагрузка</legend>
       <div class="stress-container">
-        <input type="radio" name="stress" id="min" value="1.2"><label for="min">минимальная</label>
+        <input type="radio" name="stress" id="min" value="1.2" checked><label for="min">минимальная</label>
         <div class="separator"></div>
         <a href="" class="hint">?
           <div class="hint-hidden">сидячая работа и нет физических нагрузок</div>
@@ -34,7 +34,7 @@
         </a>
       </div>
       <div class="stress-container">
-        <input type="radio" name="stress" id="middle" value="1.55" checked><label for="middle">средняя</label>
+        <input type="radio" name="stress" id="middle" value="1.55"><label for="middle">средняя</label>
         <a href="" class="hint">?
           <div class="hint-hidden">тренировки 3-5 раз в неделю</div>
         </a>
