add event for resetbutton

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </fieldset>
     <div id="buttons">
-      <button id="submit">рассчитать</button><button id="reset">очистить</button>
+      <button id="submit">рассчитать</button><button id="reset" style="display: none;">очистить</button>
     </div>
   </form>
 </section>
